--- a/Translation/PPF_en_zhcn.xml
+++ b/Translation/PPF_en_zhcn.xml
@@ -1,17 +1,29 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <SSTXMLRessources>
   <Params>
-    <Addon>PPF.esm</Addon>
+    <Addon>ppf.esm</Addon>
     <Source>en</Source>
     <Dest>cn</Dest>
     <Version>2</Version>
   </Params>
   <Content>
-    <String List="0">
+    <String List="0" Partial="2">
       <EDID>[00000000]</EDID>
       <REC>TES4:CNAM</REC>
       <Source>BenRierimanu</Source>
       <Dest>BenRierimanu</Dest>
+    </String>
+    <String List="0" Partial="2">
+      <EDID>[00000000]</EDID>
+      <REC>TES4:SNAM</REC>
+      <Source>Build Version: 74.16 NG
+Previsibines Repair Pack ESM
+Built from 1.10.984 and requires all DLC.
+Please see the nexus mod page or git repository for extended author credits and community contributions.</Source>
+      <Dest>Build Version: 74.16 NG
+Previsibines Repair Pack ESM
+Built from 1.10.984 and requires all DLC.
+Please see the nexus mod page or git repository for extended author credits and community contributions.</Dest>
     </String>
     <String List="0">
       <EDID>DLC04ZooCageWallTallDoorSingle01</EDID>
