--- a/Translation/PPF_en_es.xml
+++ b/Translation/PPF_en_es.xml
@@ -16,11 +16,11 @@
     <String List="0" Partial="2">
       <EDID>[00000000]</EDID>
       <REC>TES4:SNAM</REC>
-      <Source>Build Version: 74.20 NG
+      <Source>Build Version: 74.21 NG
 Previsibines Repair Pack ESM
 Built from 1.10.984 and requires all DLC.
 Please see the nexus mod page or git repository for extended author credits and community contributions.</Source>
-      <Dest>Build Version: 74.20 NG
+      <Dest>Build Version: 74.21 NG
 Previsibines Repair Pack ESM
 Built from 1.10.984 and requires all DLC.
 Please see the nexus mod page or git repository for extended author credits and community contributions.</Dest>
@@ -691,11 +691,11 @@ Please see the nexus mod page or git repository for extended author credits and 
       <Source>U.S.S. Constitution</Source>
       <Dest>USS Constitution</Dest>
     </String>
-    <String List="0" Partial="1">
+    <String List="0">
       <EDID>InstituteTunnel01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Public Works Maintenance Area</Source>
-      <Dest>Área de Mantenimiento de Obras Públicas</Dest>
+      <Dest>Zona de mantenimiento de obras públicas</Dest>
     </String>
     <String List="0">
       <EDID>GwinnettBrewery01</EDID>
