--- a/Translation/PRP_en_es.xml
+++ b/Translation/PRP_en_es.xml
@@ -16,13 +16,13 @@
     <String List="0" Partial="2">
       <EDID>[00000000]</EDID>
       <REC>TES4:SNAM</REC>
-      <Source>Build Version: 74.14 OG
+      <Source>Build Version: 74.14 NG
 Previsibines Repair Pack ESP
-Built from 1.10.163 and requires all DLC.
+Built from 1.10.984 and requires all DLC.
 Please see the nexus mod page or git repository for extended author credits and community contributions.</Source>
-      <Dest>Build Version: 74.14 OG
+      <Dest>Build Version: 74.14 NG
 Previsibines Repair Pack ESP
-Built from 1.10.163 and requires all DLC.
+Built from 1.10.984 and requires all DLC.
 Please see the nexus mod page or git repository for extended author credits and community contributions.</Dest>
     </String>
     <String List="0">
