--- a/Translation/PPF_en_zhcn.xml
+++ b/Translation/PPF_en_zhcn.xml
@@ -16,11 +16,11 @@
     <String List="0" Partial="2">
       <EDID>[00000000]</EDID>
       <REC>TES4:SNAM</REC>
-      <Source>Build Version: 74.16 NG
+      <Source>Build Version: 74.21 NG
 Previsibines Repair Pack ESM
 Built from 1.10.984 and requires all DLC.
 Please see the nexus mod page or git repository for extended author credits and community contributions.</Source>
-      <Dest>Build Version: 74.16 NG
+      <Dest>Build Version: 74.21 NG
 Previsibines Repair Pack ESM
 Built from 1.10.984 and requires all DLC.
 Please see the nexus mod page or git repository for extended author credits and community contributions.</Dest>
@@ -694,7 +694,7 @@ Please see the nexus mod page or git repository for extended author credits and 
     <String List="0">
       <EDID>InstituteTunnel01</EDID>
       <REC>CELL:FULL</REC>
-      <Source>Public Works Maintenence Area</Source>
+      <Source>Public Works Maintenance Area</Source>
       <Dest>公共工程维护区</Dest>
     </String>
     <String List="0">
